--- a/requirements-6.3.1.txt
+++ b/requirements-6.3.1.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements-6.3.1.txt requirements.in
 #
--e git+ssh://git@192.168.122.244/~/repo-b.git#egg=repo_b
+-e git+https://github.com/RedRoserade/pip-tools-repro-repo-b.git#egg=repo_b
     # via -r requirements.in
--e git+ssh://git@192.168.122.244/~/repo-c.git#egg=repo_c
+-e git+https://github.com/RedRoserade/pip-tools-repro-repo-c.git#egg=repo_c
     # via
     #   -r requirements.in
     #   repo-b
